--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,23 +14,19 @@ on:
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  install:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up CMake
-        run: sudo apt-get install cmake
-
-      - name: Build
-        run: cmake . && make
-
-      - name: Run tests
-        run: make test
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y -f build-essential g++ cmake
+  build:
+    needs: install
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build project
+        run: g++ main.cpp -std=c++17 -o firstIO
